# Uni.CAN

./: CMakeLists.txt  README.md
cmake/: cpm-libsocketcan.cmake  cpm-uni.common.cmake
include/: uni_can.h  uni_can_channel.h  uni_can_devinfo.h  uni_can_factory.h  uni_can_j1939_const.h  uni_can_j1939_msg.h  uni_can_j1939_msgdesc.h  uni_can_j1939_pgn.h  uni_can_j1939_signal.h  uni_can_j1939_tp.h  uni_can_message.h
include_private/: can_chai_channel.h  can_chai_provider.h  can_channel_interface.h  can_ixxat_channel.h  can_ixxat_provider.h  can_provider.h  can_socketcan_channel.h  can_socketcan_provider.h  common_queue.h  common_sysfs.h
src/: can_chai_channel.cpp  can_chai_provider.cpp  can_ixxat_channel.cpp  can_ixxat_provider.cpp  can_ixxat_uids.cpp  can_socketcan_channel.cpp  can_socketcan_provider.cpp  common_sysfs.cpp  uni_can_channel.cpp  uni_can_factory.cpp  uni_can_j1939_msg.c  uni_can_j1939_msgdesc.c  uni_can_j1939_pgn.c  uni_can_j1939_tp.c  uni_can_message.c
src_tests/: CMakeLists.txt
src_tests/j1939/: uni_can_test_j1939.cpp
